force-app/main/default/objects/Team_Members__c/fields/Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>Agent_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Team Members</relationshipLabel>
    <relationshipName>Team_Members</relationshipName>
    <type>Lookup</type>
</CustomField>