force-app/main/default/objects/Team_Members__c/fields/Can_Edit__c.field-meta.xml
<CustomField>
    <fullName>Can_Edit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Team Member - Can Edit - Boolean value passed in the payload by Dynamo DB</description>
    <label>Can Edit</label>
    <type>Checkbox</type>
</CustomField>