force-app/main/default/objects/Team_Members__c/fields/CS_Key__c.field-meta.xml
<CustomField>
    <fullName>CS_Key__c</fullName>
    <label>CS Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>