force-app/main/default/objects/Team_Members__c/fields/Invitation_Date__c.field-meta.xml
<CustomField>
    <fullName>Invitation_Date__c</fullName>
    <label>Invitation Date</label>
    <type>DateTime</type>
</CustomField>