force-app/main/default/objects/Team_Members__c/fields/Invitation_Request_ID__c.field-meta.xml
<CustomField>
    <fullName>Invitation_Request_ID__c</fullName>
    <externalId>true</externalId>
    <label>Invitation Request ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>