force-app/main/default/objects/Team_Members__c/fields/Lead_Email__c.field-meta.xml
<CustomField>
    <fullName>Lead_Email__c</fullName>
    <formula>Team_Lead_SubID_ID__r.Private_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Email</label>
    <type>Text</type>
</CustomField>