force-app/main/default/objects/Team_Members__c/fields/Member_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Member_First_Name__c</fullName>
    <formula>Agent_Name__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Member First Name</label>
    <type>Text</type>
</CustomField>