force-app/main/default/objects/Team_Members__c/fields/Office_ID__c.field-meta.xml
<CustomField>
    <fullName>Office_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Office ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Team Members</relationshipLabel>
    <relationshipName>Team_Members</relationshipName>
    <type>Lookup</type>
</CustomField>