force-app/main/default/objects/Team_Members__c/fields/Report_View__c.field-meta.xml
<CustomField>
    <fullName>Report_View__c</fullName>
    <label>Report View</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>