force-app/main/default/objects/Team_Members__c/fields/Status_of_Invitation__c.field-meta.xml
<CustomField>
    <fullName>Status_of_Invitation__c</fullName>
    <label>Status of Invitation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Removed</fullName>
            </value>
            <value>
                <fullName>Resend</fullName>
            </value>
            <value>
                <fullName>Cancel Invitation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>