force-app/main/default/objects/Team_Members__c/fields/Status_of_team__c.field-meta.xml
<CustomField>
    <fullName>Status_of_team__c</fullName>
    <label>Status of team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>