force-app/main/default/objects/Team_Members__c/fields/Subscription_ID__c.field-meta.xml
<CustomField>
    <fullName>Subscription_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subscription ID</label>
    <referenceTo>Subscriptions__c</referenceTo>
    <relationshipLabel>Team Members</relationshipLabel>
    <relationshipName>Team_Members</relationshipName>
    <type>Lookup</type>
</CustomField>