force-app/main/default/objects/Team_Members__c/fields/Syndication__c.field-meta.xml
<CustomField>
    <fullName>Syndication__c</fullName>
    <formula>Team_Name__r.Syndicate_Listings_As_Team_Lead__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Syndication</label>
    <type>Checkbox</type>
</CustomField>