force-app/main/default/objects/Team_Members__c/fields/Team_Lead_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Team_Lead_First_Name__c</fullName>
    <formula>Team_Lead_Name__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Team Lead First Name</label>
    <type>Text</type>
</CustomField>