force-app/main/default/objects/Team_Members__c/fields/Team_Lead_Name__c.field-meta.xml
<CustomField>
    <fullName>Team_Lead_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team Lead Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Team Members (Team Lead Name)</relationshipLabel>
    <relationshipName>Team_Members1</relationshipName>
    <type>Lookup</type>
</CustomField>