force-app/main/default/objects/Team_Members__c/fields/Team_Lead_SubID_ID__c.field-meta.xml
<CustomField>
    <fullName>Team_Lead_SubID_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team Lead SubID ID</label>
    <referenceTo>Subscriptions__c</referenceTo>
    <relationshipLabel>Team Members (Team Lead SubID ID)</relationshipLabel>
    <relationshipName>Team_Members1</relationshipName>
    <type>Lookup</type>
</CustomField>