force-app/main/default/objects/Team_Members__c/fields/Team_Member_Email__c.field-meta.xml
<CustomField>
    <fullName>Team_Member_Email__c</fullName>
    <label>Team Member Email</label>
    <type>Email</type>
</CustomField>