force-app/main/default/objects/Team_Members__c/fields/Team_Member_Sub_ID__c.field-meta.xml
<CustomField>
    <fullName>Team_Member_Sub_ID__c</fullName>
    <label>Team Member Sub ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>