force-app/main/default/objects/Team_Members__c/fields/Team_Name__c.field-meta.xml
<CustomField>
    <fullName>Team_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team ID</label>
    <referenceTo>Teams__c</referenceTo>
    <relationshipLabel>Team Members</relationshipLabel>
    <relationshipName>Team_Members</relationshipName>
    <type>Lookup</type>
</CustomField>