force-app/main/default/objects/Team_Members__c/fields/Team_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Team_Name_Formula__c</fullName>
    <formula>Team_Name__r.Team_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Team Name</label>
    <type>Text</type>
</CustomField>