force-app/main/default/objects/Team_Members__c/fields/Updated_Date_of_Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Updated_Date_of_Team_Member__c</fullName>
    <formula>DATEVALUE(Updated_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Updated Date of Team Member</label>
    <type>Date</type>
</CustomField>