force-app/main/default/objects/Team_Members__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Subscription_ID__c</columns>
    <columns>Team_Name__c</columns>
    <columns>Team_Name_Formula__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CS_Key__c</columns>
    <columns>Member_Type__c</columns>
    <columns>Status_of_Invitation__c</columns>
    <columns>Status_of_team__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Team_Name_Formula__c</field>
        <operation>equals</operation>
        <value>Piotr Test 4500117 user team NEW</value>
    </filters>
    <label>All</label>
</ListView>